RESOLVED FIXED23978
wxGraphicsMatrix created w/ incorrect method
https://bugs.webkit.org/show_bug.cgi?id=23978
Summary wxGraphicsMatrix created w/ incorrect method
Kevin Watters
Reported 2009-02-16 13:19:50 PST
In TransformationMatrixWx.cpp a wxGraphicsMatrix is created with its constructor, instead of with wxGraphicsRenderer::CreateMatrix, so it has an invalid wxObjectRefData set.
Attachments
use wxGraphicsRenderer::CreateMatrix to create wxGraphicsMatrix (1.26 KB, patch)
2009-02-16 13:20 PST, Kevin Watters
kevino: review+
Kevin Watters
Comment 1 2009-02-16 13:20:55 PST
Created attachment 27707 [details] use wxGraphicsRenderer::CreateMatrix to create wxGraphicsMatrix
Kevin Ollivier
Comment 2 2009-02-16 14:07:48 PST
Landed in r41021, thanks!
Note You need to log in before you can comment on or make changes to this bug.