Reviewed by Kevin Ollivier.

The ref data is not properly set unless we use the CreateMatrix function.

https://bugs.webkit.org/show_bug.cgi?id=23978


Canonical link: https://commits.webkit.org/33118@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41021 268f45cc-cd09-0410-ab3c-d52691b4dbfc